Moved oracle dependancy out of it's own task in site.yml and correctly into jenkins role

--- a/site.yml
+++ b/site.yml
@@ -7,16 +7,17 @@
   roles:
     - common
 
-- name: install java8
-  hosts: jenkins-master
-  remote_user: vagrant
-
-  roles:
-    - oracle-java
-
 - name: install jenkins-master
   hosts: jenkins-master
   remote_user: vagrant
 
   roles:
+    - oracle-java
     - jenkins-master
+
+- name: install gitlab
+  hosts: gitlab
+  remote_user: vagrant
+
+  roles:
+    - gitlab
