Revert "Changed loops back as it doesn't want to work at the moment"
This reverts commit 9ac7fc6e9869439ba6f9ca03db6faacaf43bdf11.

--- a/roles/oracle-java/tasks/installation/redhat/main.yml
+++ b/roles/oracle-java/tasks/installation/redhat/main.yml
@@ -33,6 +33,8 @@
     - { path: "{{ oracle_java_home }}/bin", exe: 'keytool' }
     - { path: "{{ oracle_java_home }}/bin", exe: 'javac' }
     - { path: "{{ oracle_java_home }}/bin", exe: 'javadoc' }
+  loop_control:
+    loop_var: item
   become: yes
   when: (
           oracle_java_set_as_default and
