--- a/roles/jenkins-master/tasks/plugins.yml
+++ b/roles/jenkins-master/tasks/plugins.yml
@@ -50,7 +50,7 @@
     name: "{{ item }}"
     jenkins_home: "{{ jenkins_home }}"
     url_username: "{{ jenkins_admin_username }}"
-    url_password: "{{ jenkins_admin_password }}"
+    #    url_password: "{{ jenkins_admin_password }}"
     state: "{{ jenkins_plugins_state }}"
     timeout: "{{ jenkins_plugin_timeout }}"
     updates_expiration: "{{ jenkins_plugin_updates_expiration }}"
